--- a/style.css
+++ b/style.css
@@ -1,19 +1,29 @@
-.container{
-    margin: auto;
-    border-color: black;
-    border-style: solid;
-    height: 960px;
-    width: 960px;
-    display: grid;
-    grid-template-columns: auto auto auto;
-    background-color: #2196F3;
-    padding: 10px;
+:root {
+    --grid-cols: 1;
+    --grid-rows: 1;
 }
 
-.grid-item {
-    background-color: rgba(255, 255, 255, 0.8);
+.container{
+    display: grid;
+
+    margin: auto;
+    position: absolute;
+	top:0;
+	bottom: 0;
+	left: 0;
+    right: 0;
+    
+    border-color: black;
+    border-style: solid;
+    border: 1px;
+    height: 600px;
+    width: 600px;
+    grid-template-rows: repeat(var(--grid-rows), 1fr);
+    grid-template-columns: repeat(var(--grid-cols), 1fr);
+    
+}
+
+.gridItem {
+    background-color: white;
     border: 1px solid rgba(0, 0, 0, 0.8);
-    padding: 20px;
-    font-size: 30px;
-    text-align: center;
-  }
+}
