--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body{
+    background-color: #242526;
+}
 :root {
     --grid-cols: 1;
     --grid-rows: 1;
@@ -13,6 +16,7 @@
 	left: 0;
     right: 0;
     
+   
     border-color: black;
     border-style: solid;
     border: 1px;
@@ -20,7 +24,7 @@
     width: 600px;
     grid-template-rows: repeat(var(--grid-rows), 1fr);
     grid-template-columns: repeat(var(--grid-cols), 1fr);
-    background-color: #eeeeee;
+
     
 }
 
@@ -32,4 +36,44 @@
 
 .changeColor{
     background-color: #18b0b0;
+    
+}
+
+.title{
+    position: absolute;
+    text-align: center;
+    left: 0;
+    right: 0;
+    margin-top: 80px;
+}
+
+.text{
+    font-family: "montserrat";
+    color: #18b0b0;
+    font-size: 50px;
+}
+
+.button{
+    position: absolute;
+    text-align: center;
+    left: 0;
+    right: 0;
+    margin-top: 850px;
+
+}
+
+.btn{
+    border: 1px solid #18b0b0;
+    background: none;
+    color: #18b0b0;
+    padding: 10px 20px;
+    font-size: 20px;
+    cursor: pointer;
+    font-family: "montserrat";
+    
+}
+
+
+.btn:hover{
+    color: #393e46;
 }
