--- a/style.css
+++ b/style.css
@@ -6,7 +6,12 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    text-align: center;
+    justify-content: center;
+
+    position:absolute; 
+    left:0; right:0;
+    top:0; bottom:0;
 }
 
 :root {
@@ -19,8 +24,8 @@ body{
     border-color: black;
     border-style: solid;
     border: 1px;
-    height: 400px;
-    width: 400px;
+    height: 600px;
+    width: 600px;
     grid-template-rows: repeat(var(--grid-rows), 1fr);
     grid-template-columns: repeat(var(--grid-cols), 1fr);
 }
@@ -36,21 +41,15 @@ body{
     
 }
 
-.title{
-    text-align: center;
-}
-
 .text{
     font-family: "montserrat";
     color: #18b0b0;
     font-size: 30px;
-}
-
-.button{
-    text-align: center;
+    margin: 40px 0;
 }
 
 .btn{
+    margin: 40px 0;
     border: 1px solid #18b0b0;
     border-radius: 25px;
     background: none;
@@ -59,9 +58,8 @@ body{
     font-size: 20px;
     cursor: pointer;
     font-family: "montserrat";
-    
+    transition: color 1.0s linear;
 }
-
 
 .btn:hover{
     color: #242526;
