--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@ body{
 
 .container{
     display: grid;
-    border-color: black;
     border-style: solid;
     border: 1px;
     height: 600px;
@@ -32,7 +31,7 @@ body{
 
 .gridItem {
     background-color: #393e46;
-    border: 1px solid rgba(0, 0, 0, 0.8);
+    border: 1px solid;
     cursor: pointer;
 }
 
@@ -48,9 +47,15 @@ body{
     margin: 40px 0;
 }
 
-.btn{
+.rgb{
+    font-family: "montserrat";
+    color: #ff7272;
+    font-size: 30px;
     margin: 40px 0;
-    border: 1px solid #18b0b0;
+}
+
+.btn{
+    margin: 40px 20px;
     border-radius: 25px;
     background: none;
     color: #18b0b0;
@@ -58,10 +63,27 @@ body{
     font-size: 20px;
     cursor: pointer;
     font-family: "montserrat";
-    transition: color 1.0s linear;
+    transition: color 0.6s linear;
 }
 
-.btn:hover{
+.btn-1{
+    color: #18b0b0;
+    border: 1px solid #18b0b0;
+}
+
+.btn-1:hover{
     color: #242526;
     background-color: #18b0b0;
 }
+
+.btn-2{
+    border: 1px solid #ff7272;
+    color: #ff7272;
+}
+
+.btn-2:hover{
+    color: #242526;
+    background-color: #ff7272;
+}
+
+button:focus {outline: 0;}
